# PERSIA

./: .gitignore  MANIFEST.in  Makefile  pyproject.toml  readme.org  setup.cfg.backup
persia/: __init__.py
rust/persia-embedding-server/src/embedding_worker_service/: mod.rs
